    - Added compatibility with the "Level Depending on Event" and "Level Depending on Ram Address" patches: now Retry respawning and checkpoints will work correctly when in the new levels! (as an added bonus, it adds midway support to those patches, since they don't quite work originally).

v0.3.6:
    - Made so the Retry prompt shows up immediately when falling in a pit and not using !fast_prompt = 1.
    - Fixed cursor and letters outlines when not using the prompt box (now they're the same as in GFX28).
    - Added !disable_hurry_up option to disable the tempo hike effect when reaching 100 seconds in a level.
    - Added !pipe_entrance_freeze option to force lock/unlock sprites during pipe entrances and avoid possible inconsistencies of the vanilla method (default is vanilla for consistency with previous versions).
    - Added !ram_midways_override address that can be used to override midways (prevent midways from spawning and/or prevent room checkpoints to work). Inspired by the "No midways" mode in the hack "Sure Shot".
    - Added "door_animation" extra routine that will be called every frame during the fadeout when entering a door.
    - Fixed being able to use Start+Select in the intro level due to Retry's custom Start+Select behavior.

v0.3.5:
    - Fixed insertion issue in case another UberASM code uses nested namespaces, for example Dynamic Z (thanks to Alex for reporting this).
    - Added label definition for each Retry freeram define so that they can be referenced by other UberASM codes without having to copy-paste the defines in the other files.
    - - Added setting (turned on by default) for Boo Ring's position reset on death and/or on level load, useful for consistency in Kaizo levels.
    - Added optional fix for some animations still running when the Retry prompt is shown (like Magikoopa's Magic flashing), with the !prompt_freeze = 2 setting.
    - Fixed timer still ticking down while the Retry prompt is shown when using !prompt_freeze = 0.